force-app/main/default/objects/EntityChangeLog__c/EntityChangeLog__c.object-meta.xml
<CustomObject>
    <label>Entity Change Log</label>
    <nameField>
        <displayFormat>ECL-{0000000000}</displayFormat>
        <label>Entity Change Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entity Change Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>