force-app/main/default/objects/EntityChangeLog__c/fields/ChangeDateTime__c.field-meta.xml
<CustomField>
    <fullName>ChangeDateTime__c</fullName>
    <label>Change Date Time</label>
    <type>DateTime</type>
</CustomField>