force-app/main/default/objects/EntityChangeLog__c/fields/ChangeNumber__c.field-meta.xml
<CustomField>
    <fullName>ChangeNumber__c</fullName>
    <label>Change Number</label>
    <type>AutoNumber</type>
</CustomField>