force-app/main/default/objects/EntityChangeLog__c/fields/ChangeNumberNumeric__c.field-meta.xml
<CustomField>
    <fullName>ChangeNumberNumeric__c</fullName>
    <formula>VALUE(ChangeNumber__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change Number Numeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>