force-app/main/default/objects/EntityChangeLog__c/fields/ChangeType__c.field-meta.xml
<CustomField>
    <fullName>ChangeType__c</fullName>
    <label>Change Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>