force-app/main/default/objects/EntityChangeLog__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>ProjectService</fullName>
            </value>
            <value>
                <fullName>Job</fullName>
            </value>
            <value>
                <fullName>JobAttemptWorker</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>