force-app/main/default/objects/EntityChangeLog__c/fields/EntityId__c.field-meta.xml
<CustomField>
    <fullName>EntityId__c</fullName>
    <label>Entity Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>