force-app/main/default/objects/EntityChangeLog__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Entity Change Logs</relationshipLabel>
    <relationshipName>Entity_Change_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>