force-app/main/default/objects/EntityChangeLog__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Entity Change Logs</relationshipLabel>
    <relationshipName>Entity_Change_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>