force-app/main/default/objects/EntityChangeLog__c/fields/ProjectService__c.field-meta.xml
<CustomField>
    <fullName>ProjectService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Service</label>
    <referenceTo>ProjectService__c</referenceTo>
    <relationshipLabel>Entity Change Logs</relationshipLabel>
    <relationshipName>Entity_Change_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>