force-app/main/default/objects/EntityChangeLog__c/fields/ProjectType__c.field-meta.xml
<CustomField>
    <fullName>ProjectType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Type</label>
    <referenceTo>ProjectType__c</referenceTo>
    <relationshipLabel>Entity Change Logs</relationshipLabel>
    <relationshipName>EntityChangeLogs</relationshipName>
    <type>Lookup</type>
</CustomField>